# cmakegen

./: .gitignore  README.md  main.py  setup.cfg
src/cmakegen/: __init__.py  __main__.py  cmakegen.py  version.py
src/cmakegen/templates/: CMakeLists.tests.txt  Config.cmake.in  test.cpp
templates/: CMakeLists.main.txt  CMakeLists.src.txt  CMakeLists.tests.txt  header.h  source.cpp  test.cpp
tests/: test_cmakegen.py
tests/app/: CMakeLists.txt  main.cpp
