[metadata]
name = cmakegen
version = 0.0.1
author = Lorenzo Vannucci
author_email = lore.ucci@gmail.com
description = Generate CMake-based C++ projects via Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loreucci/cmakegen
project_urls =
    Bug Tracker = https://github.com/loreucci/cmakegen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        cmakegen = cmakegen:run_cmakegen